--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ os:
   - linux
   - osx
 julia:
-  - release
+  - 0.4
+  - 0.5
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("GeneralizedMetropolisHastings"); Pkg.test("GeneralizedMetropolisHastings"; coverage=true)'
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("GeneralizedMetropolisHastings"); Pkg.test("GeneralizedMetropolisHastings"; coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("GeneralizedMetropolisHastings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
