--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,4 @@ script:
   - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("GeneralizedMetropolisHastings"); Pkg.test("GeneralizedMetropolisHastings"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("GeneralizedMetropolisHastings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
+  - julia -e 'cd(Pkg.dir("GeneralizedMetropolisHastings")); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
