--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
   - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
   - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("GeneralizedMetropolisHastings"); Pkg.test("GeneralizedMetropolisHastings"; coverage=true)'
 after_success:
-  - julia -e 'cd(Pkg.dir("GeneralizedMetropolisHastings")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(process_folder())'
+  - julia -e 'cd(Pkg.dir("GeneralizedMetropolisHastings")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
   - julia -e 'cd(Pkg.dir("GeneralizedMetropolisHastings")); Pkg.add("Documenter"); include(joinpath("docs", "make.jl"))'
